# vcpe

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md
.github/prompts/: opsx-architect.prompt.md  opsx-revise.prompt.md
.github/workflows/: homebrew-tap.yml
Formula/: vcpe.rb
config/: defaults.env
config/profiles/: bng-20.env  bng-9.env  default.env  routerd-7.env  xb10-7.env
controlplane/: go.mod
docs/: architecture.md  networking.md  runbook.md
extensions/vcpe-visual-editor/: .vscodeignore  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
manifests/: dual-gateway.yaml  example-macvlan.yaml  example.yaml  single-gateway.yaml  triple-gateway.yaml  xb10.yaml
packaging/homebrew/: README.md
platform/scripts/: net
scripts/: bng  client  homebrew-tap  mv1  net  routerd  stage-runtime-init-binaries  sync-homebrew-vcpe  vcpe  webpa  xb10
services/bng/: Containerfile  compose.yaml
services/event-sink/: Containerfile  README.md  compose.env  compose.yaml  go.mod  go.sum
services/gateway/: Containerfile  compose.env  compose.yaml
services/gateway/src/apparmor-simulator/: CMakeLists.txt  apparmor-simulator.c  events.c  events.h
services/mv1/: Containerfile  compose.yaml
services/oktopus/: Containerfile  compose.env  compose.yaml  manifest-example.yaml  nats.cfg  nginx-main.conf  nginx.conf  oktopus.env
services/routerd/: Containerfile  compose.yaml
services/webpa/: Containerfile  compose.yaml
services/xb10/: Containerfile  compose.yaml
tests/smoke/: bng-20.sh  bng-7.sh  bng-9.sh  client-7-p1.sh  (+4 more)
(+454 files in other folders)
